# requester

./: Cargo.toml  diesel.toml
config/: rqstr.yaml
migrations/2022-04-16-115443_create_apis/: down.sql  up.sql
migrations/2022-04-16-115643_create_resource_table/: up.sql
migrations/2022-04-16-143639_create_request_table/: down.sql  up.sql
migrations/2022-04-16-143644_create_header_table/: down.sql  up.sql
migrations/2022-04-23-051335_create_param_table/: down.sql  up.sql
src/: api.rs  config.rs  http.rs  interface.rs  lib.rs  main.rs  models.rs  schema.rs  types.rs
src/interface/: left_widget.rs  main_window.rs  mod.rs  right_widget.rs
src/services/: api_service.rs  header_service.rs  mod.rs  param_service.rs  request_service.rs  resource_service.rs
